NEW: admin/product - list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # ?useSSL=false&serverTimezone=UTC
 #
 #spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/IASF_Securing_Web_MySQL
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/FoodMate_Spring
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
