NEW: admin/product delete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.datasource.password=
 spring.security.user.name=hieu_icetea
 spring.security.user.password=123456
 spring.security.user.roles=admin
+#
+#
+# Use <input> hidden _method (th:method)
+#
+spring.mvc.hiddenmethod.filter.enabled=true
