--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.5.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
+	<groupId>Hieu_iceTea</groupId>
 	<artifactId>FoodMate_Spring</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>FoodMate_Spring</name>
