NEW: data-rest API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,8 @@ spring.security.user.roles=admin
 # Use <input> hidden _method (th:method)
 #
 spring.mvc.hiddenmethod.filter.enabled=true
+#
+#
+# Cấu hình data-rest API
+#
+spring.data.rest.base-path=api
