--- a/pom.xml
+++ b/pom.xml
@@ -76,10 +76,17 @@
 		</dependency>
 
 		<!--https://baeldung.com/java-email-->
-		<dependency>
+		<!--<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.5.0-b01</version>
+		</dependency>-->
+
+		<!--https://javaee.github.io/javamail/-->
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 	</dependencies>
 
