--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,23 @@ spring.mvc.hiddenmethod.filter.enabled=true
 # Cấu hình data-rest API
 #
 spring.data.rest.base-path=api
+#
+#
+# Spring Mail - Gmail SMTP
+#
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=Demo.Hieu.iceTea@gmail.com
+spring.mail.password=xxolhnrisazzytbj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#
+#
+# path to attachment file
+#attachment.invoice=path_to_file
+#
+# Mail templates
+#
+# Templates directory inside main/resources or absolute filesystem path
+#spring.mail.templates.path=mail-templates
+#spring.mail.templates.path=/path/to/templates
