--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # Templates directory inside main/resources or absolute filesystem path
 #spring.mail.templates.path=mail-templates
 #spring.mail.templates.path=/path/to/templates
+#
+#
+#
+# Change port
+#server.port=8080
